<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>f1tenth_teleop</name>
    <version>0.0.0</version>
    <description>Joystick teleop and Twist→Ackermann for F1TENTH (ROS 2 Jazzy).</description>
    <maintainer email="arikak@ou.edu">airou</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>ackermann_msgs</exec_depend>
    <exec_depend>joy</exec_depend>
    <exec_depend>teleop_twist_joy</exec_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>


    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
